Added Ai news tool

--- a/Agentic_AI/UserInterface/config.ini
+++ b/Agentic_AI/UserInterface/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph : Agentic AI ChatBot
 LLM_OPTIONS = Groq, Google Gemini, Qwen
-USECASE_OPTIONS = Basic Chatbot, Arxiv Search
+USECASE_OPTIONS = Basic Chatbot, Arxiv Search, AI News Bot
 GROQ_MODEL_OPTIONS = llama3-8b-8192, llama3-70b-8192, gemma2-9b-it
 Gemini_MODEL_OPTIONS = gemini-2.5-pro, gemini-2.5-flash, gemini-2.0-flash
 QWEN_MODEL_OPTIONS = Qwen/Qwen3-32B, Qwen/Qwen2.5-72B-Instruct, Qwen/Qwen2-72B-Instruct
